First version of the exercice

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Compiled class file
 *.class
 .idea
+.classpath
+.project
+.settings
 target
 
 # Log file
@@ -23,3 +26,4 @@ target
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/bin/
